Changed enable and disable buttons

--- a/webgcal/static/screen/webgcal.css
+++ b/webgcal/static/screen/webgcal.css
@@ -34,4 +34,7 @@
     background: none;
     margin-bottom: -2px;
   }
+
+  .ym-enable:before { content: "\2611"; }
+  .ym-disable:before { content: "\2610"; }
 }
