--- a/webgcal/templates/show_home.html
+++ b/webgcal/templates/show_home.html
@@ -14,4 +14,5 @@
   extensions for <a href="https://www.google.com/chrome/">Google Chrome</a> or
   the <a href="https://addons.mozilla.org/firefox/addon/operator/">Operator</a>
   addon for <a href="https://www.mozilla.org/firefox/">Mozilla Firefox</a>.</p>
+  <p><em>Currently only the following attributes are supported:</em> <code>summary</code>, <code>dtstart</code> and <code>dtend</code></p>
 {% endblock %}
