Added links to wikipedia pages

--- a/webgcal/templates/show_home.html
+++ b/webgcal/templates/show_home.html
@@ -6,7 +6,8 @@
 {% endblock %}
 
 {% block content %}
-  <p>This service allows you to add hCalendar events to your Google Calendar.</p>
+  <p>This service allows you to add <a href="https://en.wikipedia.org/wiki/HCalendar">hCalendar</a>
+  events to your <a href="https://en.wikipedia.org/wiki/Google_Calendar">Google Calendar</a>.</p>
   <p>Currently syncing {{ calendars }} calendars with {{ websites }} websites for {{ users }} users.</p>
   <p>It's important that the websites you are going to add contain hCalendar events.
   You can check this using the <a href="https://chrome.google.com/webstore/detail/gmbgaklkmjakoegficnlkhebmhkjfich">Google Calendar</a>
