Updated template format

--- a/webgcal/templates/show_dashboard.html
+++ b/webgcal/templates/show_dashboard.html
@@ -47,7 +47,13 @@
         <td><a href="{{ website.href }}" title="{{ website.href }}" rel="nofollow">{{ website.name }}</a></td>
         <td>{{ website.events.count }}</td>
         <td>{% if website.updated %}{{ website.updated|localedatetime }}{% else %}None{% endif %}<br />{{ website.status }}</td>
-        <td>{% if not website.running %}<a class="ym-button ym-edit" href="{% url webgcal.views.edit_website calendar.id website.id %}" title="Edit">Edit</a><a class="ym-button ym-{% if not website.enabled %}enable{% else %}disable{% endif %}" href="{% url webgcal.views.switch_website calendar.id website.id %}" title="{% if not website.enabled %}Enable{% else %}Disable{% endif %}">{% if not website.enabled %}Enable{% else %}Disable{% endif %}</a><a class="ym-button ym-delete" href="{% url webgcal.views.delete_website_ask calendar.id website.id %}" title="Delete">Delete</a>{% endif %}</td>
+        <td>
+          {% if not website.running %}
+          <a class="ym-button ym-edit" href="{% url webgcal.views.edit_website calendar.id website.id %}" title="Edit">Edit</a>
+          <a class="ym-button ym-{% if not website.enabled %}enable{% else %}disable{% endif %}" href="{% url webgcal.views.switch_website calendar.id website.id %}" title="{% if not website.enabled %}Enable{% else %}Disable{% endif %}">{% if not website.enabled %}Enable{% else %}Disable{% endif %}</a>
+          <a class="ym-button ym-delete" href="{% url webgcal.views.delete_website_ask calendar.id website.id %}" title="Delete">Delete</a>
+          {% endif %}
+        </td>
       </tr>
       {% endfor %}
       {% else %}
@@ -85,7 +91,11 @@
         <td>{% if calendar.updated %}{{ calendar.updated|localedatetime }}{% else %}None{% endif %}<br />{{ calendar.status }}</td>
         <td>
           <a class="ym-button ym-next" href="{% url webgcal.views.show_calendar calendar.id %}" title="Show Websites">{% if calendar.websites.count %}{{ calendar.websites.count }}{% else %}Add{% endif %} Websites</a>
-          {% if not calendar.running %}<a class="ym-button ym-edit" href="{% url webgcal.views.edit_calendar calendar.id %}" title="Edit">Edit</a><a class="ym-button ym-{% if not calendar.enabled %}enable{% else %}disable{% endif %}" href="{% url webgcal.views.switch_calendar calendar.id %}" title="{% if not calendar.enabled %}Enable{% else %}Disable{% endif %}">{% if not calendar.enabled %}Enable{% else %}Disable{% endif %}</a><a class="ym-button ym-delete" href="{% url webgcal.views.delete_calendar_ask calendar.id %}" title="Delete">Delete</a>{% endif %}
+          {% if not calendar.running %}
+          <a class="ym-button ym-edit" href="{% url webgcal.views.edit_calendar calendar.id %}" title="Edit">Edit</a>
+          <a class="ym-button ym-{% if not calendar.enabled %}enable{% else %}disable{% endif %}" href="{% url webgcal.views.switch_calendar calendar.id %}" title="{% if not calendar.enabled %}Enable{% else %}Disable{% endif %}">{% if not calendar.enabled %}Enable{% else %}Disable{% endif %}</a>
+          <a class="ym-button ym-delete" href="{% url webgcal.views.delete_calendar_ask calendar.id %}" title="Delete">Delete</a>
+          {% endif %}
         </td>
       </tr>
       {% endfor %}
