Updated attribute list

--- a/webgcal/templates/show_home.html
+++ b/webgcal/templates/show_home.html
@@ -15,5 +15,7 @@
   extensions for <a href="https://www.google.com/chrome/">Google Chrome</a> or
   the <a href="https://addons.mozilla.org/firefox/addon/operator/">Operator</a>
   addon for <a href="https://www.mozilla.org/firefox/">Mozilla Firefox</a>.</p>
-  <p><em>Currently only the following attributes are supported:</em> <code>summary</code>, <code>dtstart</code> and <code>dtend</code></p>
+  <p><em>Currently only the following attributes are supported:</em>
+  <code>summary</code>, <code>description</code>, <code>location</code>, <code>status</code>,
+  <code>dtstart</code>, <code>dtend</code>, <code>duration</code></p>
 {% endblock %}
