--- a/webgcal/templates/show_dashboard.html
+++ b/webgcal/templates/show_dashboard.html
@@ -1,35 +1,38 @@
 {% extends "base.html" %}
+{% load url from future %}
 
 {% block navigation %}
-  <li><a href="{% url webgcal.views.show_home %}" title="Home">Home</a></li>
+  <li><a href="{% url 'webgcal.views.show_home' %}" title="Home">Home</a></li>
+  {% if user.is_authenticated %}
   <li class="active"><strong>Dashboard</strong></li>
+  {% endif %}
 {% endblock %}
 
 {% block content %}
   {% if calendar %}
   {% if calendar_edit_form %}
-  <form action="{% url webgcal.views.edit_calendar calendar.id %}" method="post" class="ym-form ym-columnar">
+  <form action="{% url 'webgcal.views.edit_calendar' calendar.id %}" method="post" class="ym-form ym-columnar">
     {% csrf_token %}
     <h6>Edit Calendar:</h6>
     {{ calendar_edit_form|yamlform }}
     <div class="ym-fbox-button">
       <input class="ym-button ym-save" type="submit" name="submit" value="Save Calendar" />
-      <a class="ym-button ym-next" href="{% url webgcal.views.show_dashboard %}" title="Go Back">Go Back</a>
+      <a class="ym-button ym-next" href="{% url 'webgcal.views.show_dashboard' %}" title="Go Back">Go Back</a>
     </div>
   </form>
   {% else %}
   {% if website_edit_form %}
-  <form action="{% url webgcal.views.edit_website calendar.id website.id %}" method="post" class="ym-form ym-columnar">
+  <form action="{% url 'webgcal.views.edit_website' calendar.id website.id %}" method="post" class="ym-form ym-columnar">
     {% csrf_token %}
     <h6>Edit Website:</h6>
     {{ website_edit_form|yamlform }}
     <div class="ym-fbox-button">
       <input class="ym-button ym-save" type="submit" name="submit" value="Save Website" />
-      <a class="ym-button ym-next" href="{% url webgcal.views.show_calendar calendar.id %}" title="Go Back">Go Back</a>
+      <a class="ym-button ym-next" href="{% url 'webgcal.views.show_calendar' calendar.id %}" title="Go Back">Go Back</a>
     </div>
   </form>
   {% endif %}
-  <a class="ym-button ym-next float-right" href="{% url webgcal.views.show_dashboard %}" title="Go Back">Go Back</a>
+  <a class="ym-button ym-next float-right" href="{% url 'webgcal.views.show_dashboard' %}" title="Go Back">Go Back</a>
   <h3>Websites of {{ calendar.name }}</h3>
   <table class="bordertable">
     <thead>
@@ -49,9 +52,9 @@
         <td>{% if website.updated %}{{ website.updated|localedatetime }}{% else %}None{% endif %}<br />{{ website.status }}</td>
         <td>
           {% if not website.running %}
-          <a class="ym-button ym-edit" href="{% url webgcal.views.edit_website calendar.id website.id %}" title="Edit">Edit</a>
-          <a class="ym-button ym-{% if not website.enabled %}enable{% else %}disable{% endif %}" href="{% url webgcal.views.switch_website calendar.id website.id %}" title="{% if not website.enabled %}Enable{% else %}Disable{% endif %}">{% if not website.enabled %}Enable{% else %}Disable{% endif %}</a>
-          <a class="ym-button ym-delete" href="{% url webgcal.views.delete_website_ask calendar.id website.id %}" title="Delete">Delete</a>
+          <a class="ym-button ym-edit" href="{% url 'webgcal.views.edit_website' calendar.id website.id %}" title="Edit">Edit</a>
+          <a class="ym-button ym-{% if not website.enabled %}enable{% else %}disable{% endif %}" href="{% url 'webgcal.views.switch_website' calendar.id website.id %}" title="{% if not website.enabled %}Enable{% else %}Disable{% endif %}">{% if not website.enabled %}Enable{% else %}Disable{% endif %}</a>
+          <a class="ym-button ym-delete" href="{% url 'webgcal.views.delete_website_ask' calendar.id website.id %}" title="Delete">Delete</a>
           {% endif %}
         </td>
       </tr>
@@ -64,13 +67,13 @@
     </tbody>
   </table>
   {% if website_create_form %}
-  <form action="{% url webgcal.views.create_website calendar.id %}" method="post" class="ym-form ym-columnar">
+  <form action="{% url 'webgcal.views.create_website' calendar.id %}" method="post" class="ym-form ym-columnar">
     {% csrf_token %}
     <h6>Add Website:</h6>
     {{ website_create_form|yamlform }}
     <div class="ym-fbox-button">
       <input class="ym-button ym-save" type="submit" name="submit" value="Add Website" />
-      <a class="ym-button ym-next" href="{% url webgcal.views.show_dashboard %}" title="Go Back">Go Back</a>
+      <a class="ym-button ym-next" href="{% url 'webgcal.views.show_dashboard' %}" title="Go Back">Go Back</a>
     </div>
   </form>
   {% endif %}
@@ -90,11 +93,11 @@
         <td>{{ calendar.name }}</td>
         <td>{% if calendar.updated %}{{ calendar.updated|localedatetime }}{% else %}None{% endif %}<br />{{ calendar.status }}</td>
         <td>
-          <a class="ym-button ym-next" href="{% url webgcal.views.show_calendar calendar.id %}" title="Show Websites">{% if calendar.websites.count %}{{ calendar.websites.count }}{% else %}Add{% endif %} Websites</a>
+          <a class="ym-button ym-next" href="{% url 'webgcal.views.show_calendar' calendar.id %}" title="Show Websites">{% if calendar.websites.count %}{{ calendar.websites.count }}{% else %}Add{% endif %} Websites</a>
           {% if not calendar.running %}
-          <a class="ym-button ym-edit" href="{% url webgcal.views.edit_calendar calendar.id %}" title="Edit">Edit</a>
-          <a class="ym-button ym-{% if not calendar.enabled %}enable{% else %}disable{% endif %}" href="{% url webgcal.views.switch_calendar calendar.id %}" title="{% if not calendar.enabled %}Enable{% else %}Disable{% endif %}">{% if not calendar.enabled %}Enable{% else %}Disable{% endif %}</a>
-          <a class="ym-button ym-delete" href="{% url webgcal.views.delete_calendar_ask calendar.id %}" title="Delete">Delete</a>
+          <a class="ym-button ym-edit" href="{% url 'webgcal.views.edit_calendar' calendar.id %}" title="Edit">Edit</a>
+          <a class="ym-button ym-{% if not calendar.enabled %}enable{% else %}disable{% endif %}" href="{% url 'webgcal.views.switch_calendar' calendar.id %}" title="{% if not calendar.enabled %}Enable{% else %}Disable{% endif %}">{% if not calendar.enabled %}Enable{% else %}Disable{% endif %}</a>
+          <a class="ym-button ym-delete" href="{% url 'webgcal.views.delete_calendar_ask' calendar.id %}" title="Delete">Delete</a>
           {% endif %}
         </td>
       </tr>
@@ -103,7 +106,7 @@
   </table>
   <div class="box info">The websites are currently parsed every hour and after all parsing is done the Google Calendar will be updated in small batches.</div>
   {% if calendar_create_form %}
-  <form action="{% url webgcal.views.create_calendar %}" method="post" class="ym-form ym-columnar">
+  <form action="{% url 'webgcal.views.create_calendar' %}" method="post" class="ym-form ym-columnar">
     {% csrf_token %}
     <h6>Add Calendar:</h6>
     {{ calendar_create_form|yamlform }}
