Added paragraph tag around footer content

--- a/webgcal/templates/base.html
+++ b/webgcal/templates/base.html
@@ -47,5 +47,5 @@
 {% endblock %}
 
 {% block footer %}
-  Developed by <a href="http://www.marc-hoersken.de/" title="Marc H&ouml;rsken">Marc H&ouml;rsken</a> | Layout based on <a href="http://www.yaml.de">YAML</a> | Powered by <a href="http://www.djangoproject.com/">Django</a>, <a href="http://www.celeryproject.org/">Celery</a> and <a href="http://www.redis.io/">Redis</a> | <a href="https://github.com/mback2k/django-webgcal/">Source Code</a> on <a href="https://github.com/">Github</a>
+  <p>Developed by <a href="http://www.marc-hoersken.de/" title="Marc H&ouml;rsken">Marc H&ouml;rsken</a> | Layout based on <a href="http://www.yaml.de">YAML</a> | Powered by <a href="http://www.djangoproject.com/">Django</a>, <a href="http://www.celeryproject.org/">Celery</a> and <a href="http://www.redis.io/">Redis</a> | <a href="https://github.com/mback2k/django-webgcal/">Source Code</a> on <a href="https://github.com/">Github</a></p>
 {% endblock %}
