Automatically replace input buttons with YAML CSS link buttons

--- a/webgcal/templates/base.html
+++ b/webgcal/templates/base.html
@@ -21,6 +21,7 @@
 {% compress js %}
 {{ block.super }}
   <script type="text/javascript" src="{{ STATIC_URL }}js/jquery-1.7.1.min.js"></script>
+  <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.yamlcss.button.js"></script>
   <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.datetime.js"></script>
   <script type="text/javascript">
     var _gaq = _gaq || []; _gaq.push(['_setAccount', 'UA-2841986-9']); _gaq.push(['_trackPageview']);
