Load yaml form filters

--- a/webgcal/templates/show_dashboard.html
+++ b/webgcal/templates/show_dashboard.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load url from future %}
+{% load yamlform %}
 
 {% block navigation %}
   <li><a href="{% url 'webgcal.views.show_home' %}" title="Home">Home</a></li>
