--- a/webgcal/templates/show_dashboard.html
+++ b/webgcal/templates/show_dashboard.html
@@ -46,7 +46,7 @@
     </thead>
     <tbody>
       {% if calendar.websites %}
-      {% for website in calendar.websites %}
+      {% for website in calendar.websites.all %}
       <tr{% if not website.enabled %} style="background: #fff8f8;"{% endif %}>
         <td><a href="{{ website.href }}" title="{{ website.href }}" rel="nofollow">{{ website.name }}</a></td>
         <td>{{ website.events.count }}</td>
