--- a/webgcal/apps/webgcal/templates/show_home.html
+++ b/webgcal/apps/webgcal/templates/show_home.html
@@ -3,7 +3,7 @@
 {% block navigation %}
   <li class="active"><strong>Home</strong></li>
   {% if user.is_authenticated %}
-  <li><a href="{% url 'webgcal.views.show_dashboard' %}" title="Dashboard">Dashboard</a></li>
+  <li><a href="{% url 'webgcal:show_dashboard' %}" title="Dashboard">Dashboard</a></li>
   {% endif %}
 {% endblock %}
 
