Added sync/parse now button to calendar/website for staff

--- a/webgcal/apps/webgcal/templates/show_dashboard.html
+++ b/webgcal/apps/webgcal/templates/show_dashboard.html
@@ -56,6 +56,9 @@
           <a class="ym-button ym-edit" href="{% url 'webgcal:edit_website' calendar.id website.id %}" title="Edit">Edit</a>
           <a class="ym-button ym-{% if not website.enabled %}enable{% else %}disable{% endif %}" href="{% url 'webgcal:switch_website' calendar.id website.id %}" title="{% if not website.enabled %}Enable{% else %}Disable{% endif %}">{% if not website.enabled %}Enable{% else %}Disable{% endif %}</a>
           <a class="ym-button ym-delete" href="{% url 'webgcal:delete_website_ask' calendar.id website.id %}" title="Delete">Delete</a>
+          {% if perms.webgcal.change_website %}
+          <a class="ym-button ym-next" href="{% url 'webgcal:parse_website_now' calendar.id website.id %}" title="Parse now">Parse now</a>
+          {% endif %}
           {% endif %}
         </td>
       </tr>
@@ -99,6 +102,9 @@
           <a class="ym-button ym-edit" href="{% url 'webgcal:edit_calendar' calendar.id %}" title="Edit">Edit</a>
           <a class="ym-button ym-{% if not calendar.enabled %}enable{% else %}disable{% endif %}" href="{% url 'webgcal:switch_calendar' calendar.id %}" title="{% if not calendar.enabled %}Enable{% else %}Disable{% endif %}">{% if not calendar.enabled %}Enable{% else %}Disable{% endif %}</a>
           <a class="ym-button ym-delete" href="{% url 'webgcal:delete_calendar_ask' calendar.id %}" title="Delete">Delete</a>
+          {% if perms.webgcal.change_calendar %}
+          <a class="ym-button ym-next" href="{% url 'webgcal:sync_calendar_now' calendar.id %}" title="Sync now">Sync now</a>
+          {% endif %}
           {% endif %}
         </td>
       </tr>
