--- a/webgcal/apps/webgcal/templates/base.html
+++ b/webgcal/apps/webgcal/templates/base.html
@@ -24,16 +24,13 @@
   <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.yamlcss.button.js"></script>
   <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.datetime.js"></script>
   <script type="text/javascript">
-    var _gaq = _gaq || []; _gaq.push(['_setAccount', 'UA-2841986-9']); _gaq.push(['_trackPageview']);
-  </script>
-  <script type="text/javascript">
-    (function() {
-      var ssl = document.location.protocol == 'https:';
-      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true; ga.src = (ssl ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-      var s = document.getElementsByTagName('script'); s = s[s.length-1];
-      var p = s.parentNode;
-      p.insertBefore(ga, s);
-    })();
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-2841986-9', 'auto');
+    ga('send', 'pageview');
   </script>
 {% endcompress %}
 {% endblock %}}
