Updated to SwampDragon 0.4.1.2

--- a/webgcal/apps/webgcal/templates/show_dashboard.html
+++ b/webgcal/apps/webgcal/templates/show_dashboard.html
@@ -5,10 +5,9 @@
 {% block js %}
 {{ block.super }}
   <script type="text/javascript" src="{{ STATIC_URL }}js/angular-1.2.25.min.js"></script>
-  <script type="text/javascript" src="{{ STATIC_URL }}swampdragon/js/vendor/sockjs-0.3.4.min.js"></script>
   <script type="text/javascript" src="{{ DRAGON_URL }}settings.js"></script>
-  <script type="text/javascript" src="{{ STATIC_URL }}swampdragon/js/swampdragon.js"></script>
-  <script type="text/javascript" src="{{ STATIC_URL }}swampdragon/js/datamapper.js"></script>
+  <script type="text/javascript" src="{{ STATIC_URL }}swampdragon/js/dist/swampdragon.min.js"></script>
+  <script type="text/javascript" src="{{ STATIC_URL }}swampdragon/js/dist/datamapper.js"></script>
   <script type="text/javascript" src="{{ STATIC_URL }}swampdragon/js/angular/services.js"></script>
   <script type="text/javascript" src="{{ STATIC_URL }}js/webgcal.app.js"></script>
   <script type="text/javascript" src="{{ STATIC_URL }}js/webgcal.controllers.js"></script>
