--- a/webgcal/apps/webgcal/templates/show_dashboard.html
+++ b/webgcal/apps/webgcal/templates/show_dashboard.html
@@ -4,10 +4,10 @@
 
 {% block js %}
 {{ block.super }}
-  <script type="text/javascript" src="{{ STATIC_URL }}js/angular-1.2.25.min.js"></script>
+  <script type="text/javascript" src="{{ STATIC_URL }}js/angular-1.3.15.min.js"></script>
   <script type="text/javascript" src="{{ DRAGON_URL }}settings.js"></script>
   <script type="text/javascript" src="{{ STATIC_URL }}swampdragon/js/dist/swampdragon.min.js"></script>
-  <script type="text/javascript" src="{{ STATIC_URL }}swampdragon/js/dist/datamapper.js"></script>
+  <script type="text/javascript" src="{{ STATIC_URL }}swampdragon/js/dist/datamapper.min.js"></script>
   <script type="text/javascript" src="{{ STATIC_URL }}swampdragon/js/angular/services.js"></script>
   <script type="text/javascript" src="{{ STATIC_URL }}js/webgcal.app.js"></script>
   <script type="text/javascript" src="{{ STATIC_URL }}js/webgcal.controllers.js"></script>
