--- a/webgcal/apps/webgcal/templates/show_dashboard.html
+++ b/webgcal/apps/webgcal/templates/show_dashboard.html
@@ -1,16 +1,20 @@
 {% extends "base.html" %}
+{% load swampdragon_tags %}
 {% load jdatetime %}
 {% load yamlform %}
+{% load compress %}
 
 {% block js %}
 {{ block.super }}
+{% swampdragon_settings %}
+{% compress js %}
   <script type="text/javascript" src="{{ STATIC_URL }}js/angular-1.3.15.min.js"></script>
-  <script type="text/javascript" src="{{ DRAGON_URL }}settings.js"></script>
   <script type="text/javascript" src="{{ STATIC_URL }}swampdragon/js/dist/swampdragon.min.js"></script>
   <script type="text/javascript" src="{{ STATIC_URL }}swampdragon/js/dist/datamapper.min.js"></script>
   <script type="text/javascript" src="{{ STATIC_URL }}swampdragon/js/angular/services.js"></script>
   <script type="text/javascript" src="{{ STATIC_URL }}js/webgcal.app.js"></script>
   <script type="text/javascript" src="{{ STATIC_URL }}js/webgcal.controllers.js"></script>
+{% endcompress %}
 {% endblock %}}
 
 {% block navigation %}
