--- a/webgcal/apps/webgcal/templates/show_dashboard.html
+++ b/webgcal/apps/webgcal/templates/show_dashboard.html
@@ -63,7 +63,7 @@
     <tbody>
       {% if calendar.websites %}
       {% for website in calendar.websites.all %}
-      <tr{% if not website.enabled %} style="background: #fff8f8;"{% endif %} ng-controller="WebGCalWebsiteController" ng-init="init({{ website.id }});">
+      <tr{% if not website.enabled %} style="background: #fff8f8;"{% endif %} ng-controller="WebGCalWebsiteController" ng-init="init({{ website.id }}, {{ website.serialize_as_json }});">
         <td><a href="{{ website.href }}" title="{{ website.href }}" rel="nofollow" ng-bind="websites[0].name">{{ website.name }}</a></td>
         <td>{{ website.events.count }}</td>
         <td>{% if website.updated %}{{ website.updated|localedatetime }}{% else %}None{% endif %}<br /><span ng-bind="websites[0].status">{{ website.status }}</span></td>
@@ -109,7 +109,7 @@
     </thead>
     <tbody>
       {% for calendar in calendars %}
-      <tr{% if not calendar.enabled %} style="background: #fff8f8;"{% endif %} ng-controller="WebGCalCalendarController" ng-init="init({{ calendar.id }});">
+      <tr{% if not calendar.enabled %} style="background: #fff8f8;"{% endif %} ng-controller="WebGCalCalendarController" ng-init="init({{ calendar.id }}, {{ calendar.serialize_as_json }});">
         <td ng-bind="calendars[0].name">{{ calendar.name }}</td>
         <td>{% if calendar.updated %}{{ calendar.updated|localedatetime }}{% else %}None{% endif %}<br /><span ng-bind="calendars[0].status">{{ calendar.status }}</span></td>
         <td>
