--- a/webgcal/apps/webgcal/templates/show_dashboard.html
+++ b/webgcal/apps/webgcal/templates/show_dashboard.html
@@ -63,10 +63,15 @@
     <tbody>
       {% if calendar.websites %}
       {% for website in calendar.websites.all %}
-      <tr{% if not website.enabled %} style="background: #fff8f8;"{% endif %} ng-controller="WebGCalWebsiteController" ng-init="init({{ website.id }}, {{ website.serialize_as_json }});">
+      <tr{% if not website.enabled %} style="background: #fff8f8;"{% endif %}
+          ng-controller="WebGCalWebsiteController"
+          ng-init="init({{ website.id }}, {{ website.serialize_as_json }});">
         <td><a href="{{ website.href }}" title="{{ website.href }}" rel="nofollow" ng-bind="website.name">{{ website.name }}</a></td>
         <td>{{ website.events.count }}</td>
-        <td>{% if website.updated %}{{ website.updated|localedatetime }}{% else %}None{% endif %}<br /><span ng-bind="website.status">{{ website.status }}</span></td>
+        <td>
+          <span ng-bind="website.updated">{% if website.updated %}{{ website.updated|localedatetime }}{% else %}None{% endif %}</span><br />
+          <span ng-bind="website.status">{{ website.status }}</span>
+        </td>
         <td>
           {% if not website.has_running_task %}
           <a class="ym-button ym-edit" href="{% url 'webgcal:edit_website' calendar.id website.id %}" title="Edit">Edit</a>
@@ -109,9 +114,14 @@
     </thead>
     <tbody>
       {% for calendar in calendars %}
-      <tr{% if not calendar.enabled %} style="background: #fff8f8;"{% endif %} ng-controller="WebGCalCalendarController" ng-init="init({{ calendar.id }}, {{ calendar.serialize_as_json }});">
+      <tr{% if not calendar.enabled %} style="background: #fff8f8;"{% endif %}
+          ng-controller="WebGCalCalendarController"
+          ng-init="init({{ calendar.id }}, {{ calendar.serialize_as_json }});">
         <td ng-bind="calendar.name">{{ calendar.name }}</td>
-        <td>{% if calendar.updated %}{{ calendar.updated|localedatetime }}{% else %}None{% endif %}<br /><span ng-bind="calendar.status">{{ calendar.status }}</span></td>
+        <td>
+          <span ng-bind="calendar.updated">{% if calendar.updated %}{{ calendar.updated|localedatetime }}{% else %}None{% endif %}</span><br />
+          <span ng-bind="calendar.status">{{ calendar.status }}</span>
+        </td>
         <td>
           <a class="ym-button ym-next" href="{% url 'webgcal:show_calendar' calendar.id %}" title="Show Websites">{% if calendar.websites.count %}{{ calendar.websites.count }}{% else %}Add{% endif %} Websites</a>
           {% if not calendar.has_running_task %}
