--- a/webgcal/apps/webgcal/templates/show_dashboard.html
+++ b/webgcal/apps/webgcal/templates/show_dashboard.html
@@ -69,7 +69,7 @@
         <td><a href="{{ website.href }}" title="{{ website.href }}" rel="nofollow" ng-bind="website.name">{{ website.name }}</a></td>
         <td>{{ website.events.count }}</td>
         <td>
-          <span ng-bind-template="{% verbatim %}{{ website.updated|date:'medium' }}{% endverbatim %}">
+          <span ng-bind-template="{% verbatim %}{{ parseDate(website.updated).toLocaleDateTimeString() }}{% endverbatim %}">
             {% if website.updated %}{{ website.updated|localedatetime }}{% else %}None{% endif %}
           </span><br />
           <span ng-bind="website.status">{{ website.status }}</span>
@@ -121,7 +121,7 @@
           ng-init="init({{ calendar.id }}, {{ calendar.serialize_as_json }});">
         <td ng-bind="calendar.name">{{ calendar.name }}</td>
         <td>
-          <span ng-bind-template="{% verbatim %}{{ calendar.updated|date:'medium' }}{% endverbatim %}">
+          <span ng-bind-template="{% verbatim %}{{ parseDate(calendar.updated).toLocaleDateTimeString() }}{% endverbatim %}">
             {% if calendar.updated %}{{ calendar.updated|localedatetime }}{% else %}None{% endif %}
           </span><br />
           <span ng-bind="calendar.status">{{ calendar.status }}</span>
