Added line break to home page

--- a/webgcal/apps/webgcal/templates/show_home.html
+++ b/webgcal/apps/webgcal/templates/show_home.html
@@ -17,7 +17,7 @@
   extensions for <a href="https://www.google.com/chrome/">Google Chrome</a> or
   the <a href="https://addons.mozilla.org/firefox/addon/operator/">Operator</a>
   addon for <a href="https://www.mozilla.org/firefox/">Mozilla Firefox</a>.</p>
-  <p><em>Currently only the following attributes are supported:</em>
+  <p><em>Currently only the following attributes are supported:</em><br />
   <code>summary</code>, <code>description</code>, <code>location</code>, <code>status</code>,
   <code>dtstart</code>, <code>dtend</code>, <code>duration</code></p>
 {% endblock %}
